--- a/departments/pg/environmental-engineering.html
+++ b/departments/pg/environmental-engineering.html
@@ -454,42 +454,11 @@
     <!-- Footer End here -->
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script>
-        $(function () {
-            // Determine the folder depth
-            const folderDepth = window.location.pathname.split('/').length - 2;
 
-            // Build the relative path for header and footer
-            let relativePath = '';
-            for (let i = 0; i < folderDepth; i++) {
-                relativePath += '../';
-            }
-
-            // Load the header and footer
-            $("#header").load(relativePath + "header.html");
-            $("#footer").load(relativePath + "footer.html");
-        });
-
-        $(function () {
-            const folderDepth = window.location.pathname.split('/').length - 2;
-            let relativePath = '';
-            for (let i = 0; i < folderDepth; i++) {
-                relativePath += '../';
-            }
-
-            $("#popupContainer").load(relativePath + "popup-form.html", function () {
-                $("#openPopupBtn").on("click", function () {
-                    $("#popupOverlay").show();
-                });
-                $(document).on("click", "#closePopupBtn", function () {
-                    $("#popupOverlay").hide();
-                });
-            });
-        });
-    </script>
 
     <!-- External Js -->
     <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/department.js"></script>
     <!-- Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <!-- Bootstrap -->
