--- a/departments/ug/cse.html
+++ b/departments/ug/cse.html
@@ -95,8 +95,8 @@
     </button>
     <!-- Vertical Button End here -->
 
-   <!-- Container for the popup form -->
-   <div id="popupContainer"></div>
+    <!-- Container for the popup form -->
+    <div id="popupContainer"></div>
 
     <!-- Banner Section Start here -->
     <section id="banner">
@@ -159,7 +159,8 @@
                                 RDBMS, Computer Networks, OOPS, Data Structures and Algorithm, Software Engineering,
                                 Operating Systems, Grid Computing, Data Mining and Mobile Computing.
 
-                            <p class="text-black fw-bold">With an aim to sharpen the young student and faculty minds, the department strives to:
+                            <p class="text-black fw-bold">With an aim to sharpen the young student and faculty minds,
+                                the department strives to:
                             </p>
                             <ul class="text-black">
                                 <li>Become a pioneering centre of excellence in providing hands on Training in ORACLE
@@ -413,14 +414,12 @@
                             <div class="row g-5">
 
                                 <div class="col-lg-6">
-                                    <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/cseImg/ugCse.jpg"
+                                    <img class="img-fluid rounded" src="/assets/images/separateCourses/cseImg/ugCse.jpg"
                                         alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
-                                        src="/assets/images/separateCourses/cseImg/ugCse-1.jpg"
-                                        alt="">
+                                        src="/assets/images/separateCourses/cseImg/ugCse-1.jpg" alt="">
                                 </div>
                                 <div class="col-lg-6">
                                     <img class="img-fluid rounded"
@@ -473,50 +472,19 @@
     <!-- Footer Start here -->
     <div id="footer"></div>
     <!-- Footer End here -->
-    
+
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script>
-        $(function () {
-            // Determine the folder depth
-            const folderDepth = window.location.pathname.split('/').length - 2;
 
-            // Build the relative path for header and footer
-            let relativePath = '';
-            for (let i = 0; i < folderDepth; i++) {
-                relativePath += '../';
-            }
-
-            // Load the header and footer
-            $("#header").load(relativePath + "header.html");
-            $("#footer").load(relativePath + "footer.html");
-        });
-
-        $(function () {
-            const folderDepth = window.location.pathname.split('/').length - 2;
-            let relativePath = '';
-            for (let i = 0; i < folderDepth; i++) {
-                relativePath += '../';
-            }
-
-            $("#popupContainer").load(relativePath + "popup-form.html", function () {
-                $("#openPopupBtn").on("click", function () {
-                    $("#popupOverlay").show();
-                });
-                $(document).on("click", "#closePopupBtn", function () {
-                    $("#popupOverlay").hide();
-                });
-            });
-        });
-    </script>
 
     <!-- External Js -->
     <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/department.js"></script>
     <!-- Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    
+
 
 </body>
 
